# ghostmd

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
assets/: AppIcon.icns
crates/ghostmd/: Cargo.toml
crates/ghostmd-core/: Cargo.toml
crates/ghostmd-core/benches/: buffer_bench.rs  search_bench.rs  tree_bench.rs
crates/ghostmd-core/src/: buffer.rs  diary.rs  lib.rs  note.rs  path_utils.rs  search.rs  tree.rs
crates/ghostmd-core/tests/: integration.rs
crates/ghostmd/src/: ai.rs  app.rs  app_view.rs  assets.rs  editor.rs  editor_view.rs  file_tree.rs  file_tree_view.rs  keybindings.rs  main.rs  palette.rs  search.rs  splits.rs  tabs.rs  theme.rs
crates/ghostmd/src/app_view/: ai_commands.rs  file_ops.rs  file_undo.rs  fs_watcher.rs  mod.rs  overlays.rs  palette_dispatch.rs  rendering.rs  session.rs  split_node.rs  workspace.rs
crates/gpui-component/src/input/: state.rs
crates/gpui-component/src/theme/: default-theme.json
docs/: index.html
ghostmd-ios/: project.yml
ghostmd-ios/GhostMD/: GhostMD.entitlements  GhostMDApp.swift
ghostmd-ios/GhostMD/Models/: Diary.swift  FileNode.swift  Route.swift
ghostmd-ios/GhostMD/Store/: NoteStore.swift
ghostmd-ios/GhostMD/Utilities/: FriendlyDate.swift  PathUtils.swift
ghostmd-ios/GhostMD/Views/: ContentView.swift  FolderPickerSheet.swift  FolderView.swift  NewNoteSheet.swift  NoteEditorView.swift  SearchSheet.swift
ghostmd-ios/GhostMDUITests/: GhostMDUITests.swift
scripts/: bundle-macos.sh  install.sh
